--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
         <script type="module" src="/src/fonts.ts"></script>
     </head>
     <body>
-        <div id="terminal" class="terminal-output"></div>
-        <div class="command" id="command">
-            <span id="label"></span>
-            <input id="input" class="terminal-input" type="text" />
-        </div>
+        <div id="terminal"></div>
         <script type="module" src="/src/main.ts"></script>
     </body>
 </html>
