Color scheme support

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" type="image/svg+xml" href="favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Nick Tenebruso Terminal</title>
-        <link rel="stylesheet" type="text/css" href="/src/themes/dracula.css" />
+        <link rel="stylesheet" type="text/css" href="" id="themeSrc" />
         <link rel="stylesheet" type="text/css" href="/src/style.css" />
         <script type="module" src="/src/fonts.ts"></script>
     </head>
